Clear sensitive information from .env file and add allowedDevOrigins in next.config.ts

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_USERNAME=myusername
-MONGODB_PASSWORD=supersecretpassword
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
 MONGODB=localhost
 lmhost=127.0.0.1
 lmport=1234
