Update .gitignore to include package-lock.json and deepsitedb directory; remove allowedDevOrigins from next.config.ts

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# node
+package-lock.json
+
+#database
+/deepsitedb/
+
 #local-projects
 /public/MEEP/
